--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
 
 </head>
 <body>
-    
+    <!-- main content -->
+    <main class="max-w-screen-xl border border-2 border-red-700  mx-auto px-16 lg:px-28">
+ <header class="flex pt-10 mb-20 ">
+    <!-- text content -->
+ <div>
+    <h1 class="text-5xl md:text-7xl font-bold">
+        It's good <br>
+        tea time at The <br> Tea House
+    </h1>
+    <br>
+    <p class="text-gray-500 w-3/4">
+        Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+    </p>
+    <br>
+    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg font-bold text-white">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+</div>
+ <!--img content  -->
+ <div class="relative">
+    <!-- image -->
+     <div class="w-full">
+        <img src="images/banner.png" alt="">
+     </div>
+     <!-- card -->
+     <div class=" flex absolute items-center r bg-white shadow-lg px-2 py-2 md:px-5 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-20">
+        <!-- icon -->
+<div class="text-yellow-500 ">
+    <i class="fa-solid fa-star text-2xl"></i>
+</div>
+<!-- text -->
+        <div class="ml-3">
+            <h1 class="lg:text-2xl font-bold">
+                5.00
+            </h1>
+            <p class="text-gray-500">Trust Pilot Ratings</p>
+        </div>
+     </div>
+
+ </div>
+ </header>
+    </main>
 </body>
 </html>
