--- a/index.html
+++ b/index.html
@@ -1,70 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea House</title>
     <!-- Google font cdn -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font awesome cdn -->
-    <script src="https://kit.fontawesome.com/0a396fa662.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0a396fa662.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
-
-</head>
-<body>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
+  </head>
+  <body>
     <!-- main content -->
-    <main class="max-w-screen-xl border border-2 border-red-700  mx-auto px-16 lg:px-28">
- <header class="flex pt-10 mb-20 ">
-    <!-- text content -->
- <div>
-    <h1 class="text-5xl md:text-7xl font-bold">
-        It's good <br>
-        tea time at The <br> Tea House
-    </h1>
-    <br>
-    <p class="text-gray-500 w-3/4">
-        Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
-    </p>
-    <br>
-    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg font-bold text-white">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
-</div>
- <!--img content  -->
- <div class="relative">
-    <!-- image -->
-     <div class="w-full">
-        <img src="images/banner.png" alt="">
-     </div>
-     <!-- card -->
-     <div class=" flex absolute items-center r bg-white shadow-lg px-2 py-2 md:px-5 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-20">
-        <!-- icon -->
-<div class="text-yellow-500 ">
-    <i class="fa-solid fa-star text-2xl"></i>
-</div>
-<!-- text -->
-        <div class="ml-3">
-            <h1 class="lg:text-2xl font-bold">
-                5.00
-            </h1>
-            <p class="text-gray-500">Trust Pilot Ratings</p>
+    <main
+      class="max-w-screen-xl border border-2 border-red-700 mx-auto px-16 lg:px-28"
+    >
+      <header class="lg:flex pt-10 mb-20">
+        <!-- text content -->
+        <div>
+          <h1 class="text-5xl md:text-7xl font-bold">
+            It's good <br />
+            tea time at The <br />
+            Tea House
+          </h1>
+          <br />
+          <p class="text-gray-500 w-3/4">
+            Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
+            Your Taste Buds.
+          </p>
+          <br />
+          <button
+            class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg font-bold text-white"
+          >
+            Explore More
+            <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i>
+          </button>
         </div>
-     </div>
-
+        <!--img content  -->
+        <div class="relative">
+          <!-- image -->
+          <div class="w-full">
+            <img src="images/banner.png" alt="" />
+          </div>
+          <!-- card -->
+          <div
+            class="flex absolute items-center r bg-white shadow-lg px-2 py-2 md:px-5 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-20"
+          >
+            <!-- icon -->
+            <div class="text-yellow-500">
+              <i class="fa-solid fa-star text-2xl"></i>
+            </div>
+            <!-- text -->
+            <div class="ml-3">
+              <h1 class="lg:text-2xl font-bold">5.00</h1>
+              <p class="text-gray-500">Trust Pilot Ratings</p>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- feature product section -->
+      <section class="py-8 lg:py-24">
+        <!-- title -->
+        <div class="text-center mb-8">
+          <h1 class="text-3xl md:text-4xl font-bold mb-5">
+            Our Featured Products
+          </h1>
+          <p class="text-gray-600 max-w-3xl mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- grid card -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-center">
+          <!-- card-1 -->
+ <div class="bg-gray-100 rounded-xl p-4">
+ <img class="pb-5 mx-auto" src="images/tea-1.png" alt="" />
+     <div>
+    <h2 class="text-3xl font-bold">Milk Tea</h2>
+ <p class="text-gray-500 pt-3">
+  Creamer could be replaced by fresh milk
+ </p>
+  </div>
  </div>
- </header>
+
+          <!-- card-2 -->
+ <div class="bg-gray-100 rounded-xl p-4">
+      <img class="pb-5 mx-auto" src="images/tea-2.png" alt="" />
+            <div>
+  <h2 class="text-3xl font-bold">Black Tea</h2>
+ <p class="text-gray-500 pt-3">
+      Creamer could be replaced by fresh milk
+     </p>
+            </div>
+          </div>
+
+          <!-- card-3 -->
+          <div class="bg-gray-100 rounded-xl p-4">
+            <img class="pb-5 mx-auto" src="images/tea-3.png" alt="" />
+            <div>
+ <h2 class="text-3xl font-bold">Lemon Tea</h2>
+ <p class="text-gray-500 pt-3">
+      Creamer could be replaced by fresh milk
+         </p>
+            </div>
+          </div>
+
+          <!-- card-4 -->
+          <div class="bg-gray-100 rounded-xl p-4">
+            <img class="pb-5 mx-auto" src="images/tea-4.png" alt="" />
+            <div>
+ <h2 class="text-3xl font-bold">Green Tea</h2>
+    <p class="text-gray-500 pt-3">
+      Creamer could be replaced by fresh milk
+     </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
