--- a/index.html
+++ b/index.html
@@ -139,6 +139,48 @@
           </div>
         </div>
       </section>
+      <!-- Great tea section -->
+      <section class="mb-24">
+        <div class="grid grid-cols-1 lg:grid-cols-2 ">
+          <!-- img part -->
+          <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6 ">
+            <!-- 1st card -->
+            <div class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
+
+            </div>
+            <!-- 2nd card -->
+             <div class="bg-gradient-to-r from-orange-100 to-orange-50 row-span-2">
+              <img class="mx-auto pt-5 pb-2" src="images/fresh-1.png" alt="">
+             </div>
+             <!-- 3rd card -->
+             <div class="bg-gradient-to-r from-stone-200 to-stone-100 row-span-2">
+              <img class="mx-auto pt-5 pb-2" src="images/fresh-2.png " alt="">
+             </div>
+             <!-- 4th card -->
+             <div class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl">
+
+          </div>
+        </div>
+          <!-- text part -->
+           <div>
+            <h1 class="text-5xl font-bold mb-5">
+              Great Tea, Freshly Presented
+            </h1>
+            <p class="text-gray-500 mb-5">
+              The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+            </p>
+            <h2 class="text-3xl font-bold mb-5">
+              Unique Taste
+            </h2>
+            <p class="text-gray-500 mb-5">
+              A Unique and different style from other teapots gives a <br> luxurious and minimalist impression
+            </p>
+            <h2 class="text-3xl font-bold mb-5">Premium Quality</h2>
+            <p class="text-gray-500">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+           </div>
+        </div>
+      
+      </section>
     </main>
   </body>
 </html>
