--- a/index.html
+++ b/index.html
@@ -181,6 +181,75 @@
         </div>
       
       </section>
+<!-- Reviews section -->
+ <section class="mb-24">
+<div class="bg-gradient-to-r from-orange-500 to-red-500 grid grid-cols-1 lg:grid-cols-2 text-white px-7 lg:px-16 rounded-xl ">
+  <!-- text section -->
+<div class="flex justify-center items-center overflow-hidden">
+  <div class="w-5/6">
+    <h1 class="text-5xl font-bold mb-5 mt-10">
+      Meet Our Super Clients
+    </h1>
+    <p class="pb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+    <button class="bg-white text-orange-700 px-3 py-2 rounded-lg mb-10">Show All</button>
+    </div>
+</div>
+<!-- card section -->
+ <div class="relative py-24 ">
+   <!-- middle card -->
+   <div class="absolute z-10 top-56">
+    <div class="h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5  mx-auto">
+      <div class="absolute -top-5 -left-5 md:left-12 lg:left-5 bg-white rounded-full ">
+        <img  class="p-1" src="images/client.png" alt="">
+      </div>
+      <!-- card text -->
+       <div>
+        <p class="text-gray-500 mb-5">
+          We are providing the best and suitable home insurance services for the people who are interested to treatment
+        </p>
+        <h4 class="text-xl font-bold ">Ilham Yuda</h4>
+        <p class="text-gray-800 text-bold ">Businessman</p>
+       </div>
+  
+     </div>
+  </div>
+  <!-- top card -->
+   <div class="relative left-5 md:left-20 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40 mx-auto">
+    <div class="absolute -top-5 -left-5 bg-white rounded-full ">
+      <img  class="p-1" src="images/client.png" alt="">
+    </div>
+    <!-- card text -->
+     <div>
+      <p class="text-gray-500 mb-5">
+        We are providing the best and suitable home insurance services for the people who are interested to treatment
+      </p>
+      <h4 class="text-xl font-bold ">Ilham Yuda</h4>
+      <p class="text-gray-800 text-bold ">Businessman</p>
+     </div>
+
+   </div>
+  
+   <!-- bottom card -->
+   <div class="relative left-5 top-10 md:left-20  h-56 w-full md:w-3/4    bg-white text-black rounded-lg flex items-center opacity-40  px-5 mx-auto">
+    <div class="absolute -top-5 -left-5 bg-white rounded-full ">
+      <img  class="p-1" src="images/client.png" alt="">
+    </div>
+    <!-- card text -->
+     <div>
+      <p class="text-gray-500 mb-5">
+        We are providing the best and suitable home insurance services for the people who are interested to treatment
+      </p>
+      <h4 class="text-xl font-bold ">Ilham Yuda</h4>
+      <p class="text-gray-800 text-bold ">Businessman</p>
+     </div>
+
+   </div>
+
+ </div>
+
+</div>
+ </section>
+
     </main>
   </body>
 </html>
