--- a/index.html
+++ b/index.html
@@ -248,8 +248,82 @@
  </div>
 
 </div>
- </section>
 
+ </section>
+<!-- new section  -->
     </main>
+    <!-- footer section  -->
+     <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+<div class="w-9/12 mx-auto">
+  <!-- logo -->
+   <div class="mb-8 flex justify-between">
+    <img class="mb-8" src="images/cup.png" alt="">
+    <div class="flex items-center gap-2">
+      <h2>Ready to get started?</h2>
+      <button class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg font-bold text-white">Get Started</button>
+    </div>
+
+   </div>
+   <!-- Links -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+      <!-- first column -->
+       <div>
+        <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+        <ul class="space-y-2">
+          <li> <a class="hover:text-orange-600" href="#">Home</a></li>
+          <li> <a class="hover:text-orange-600" href="#">About Us</a></li>
+          <li> <a class="hover:text-orange-600" href="#">Insurance</a></li>
+          <li> <a class="hover:text-orange-600" href="#">Privacy Policy</a></li>
+        </ul>
+       </div>
+        <!-- second column -->
+        <div>
+          <h3 class="font-semibold text-lg mb-3">Our Service</h3>
+          <ul class="space-y-2">
+            <li> <a class="hover:text-orange-600" href="#">Life Insurance</a></li>
+            <li> <a class="hover:text-orange-600" href="#">Car Insurance</a></li>
+            <li> <a class="hover:text-orange-600" href="#">Health Insurance</a></li>
+            <li> <a class="hover:text-orange-600" href="#">House Insurance</a></li>
+          </ul>
+         </div>
+          <!-- Third column -->
+       <div>
+        <h3 class="font-semibold text-lg mb-3">Help</h3>
+        <ul class="space-y-2">
+          <li> <a class="hover:text-orange-600" href="#">FAQs</a></li>
+          <li> <a class="hover:text-orange-600" href="#">Contact Us</a></li>
+        
+        </ul>
+       </div>
+ <!-- Fourth column -->
+ <div>
+  <h3 class="font-semibold text-lg mb-3">Subscribe to our newsletter</h3>
+<div class="flex flex-col space-y-2">
+  <div>
+    <input type="text" placeholder="Email Address
+    " class="bg-transparent border-b-2 border-black w-4/6 md:h-5/6 ">
+    <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 rounded-full text-white inline-flex justify-center items-center"></i>
+    <div class="flex justify-between w-2/5 mb-2 mt-10">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-square-instagram"></i>
+      <i class="fa-brands fa-square-twitter"></i>
+    </div>
+  </div>
+
+
+</div>
+ </div>
+
+  
+
+    </div>
+    <div class="text-center pt-4 mt-4">
+<p class="text-gray-600 text-sm">
+  © 2027 UIDesign.to - All rights reserved.
+</p>
+    </div>
+
+</div>
+     </footer>
   </body>
 </html>
