added the font family

--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
             colors: {
               clifford: "#da373d",
             },
+            fontFamily:{
+              manrope:[ 'Manrope', 'sans-serif'],
+
+              
+            }
           },
         },
       };
     </script>
   </head>
-  <body>
+  <body class="font-manrope">
     <!-- main content -->
     <main
       class="max-w-screen-xl border border-2 border-red-700 mx-auto px-16 lg:px-28"
