complete the new section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body class="font-manrope">
     <!-- main content -->
     <main
-      class="max-w-screen-xl border border-2 border-red-700 mx-auto px-16 lg:px-28"
+      class="max-w-screen-xl  mx-auto px-16 lg:px-28"
     >
       <header class="lg:flex pt-10 mb-20">
         <!-- text content -->
@@ -256,6 +256,52 @@
 
  </section>
 <!-- new section  -->
+ <section class="pb-24">
+  <!-- text section -->
+  <div class="text-center pt-16 ">
+    <h1 class="text-5xl md:text-6xl lg:text-8xl font-bold mb-5">News & Events</h1>
+    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+  </div>
+  <!-- img container  -->
+   <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-4">
+    <!-- card-1 -->
+     <div class="border border-stone-200 p-5 rounded-xl">
+      <img class="border border-dashed border-stone-400 rounded-xl" src="images/news-1.png" alt="">
+      <div class="mt-5">
+        <small class="text-sm text-gray-500">Feb 05, 2027</small>
+        <h4 class="text-2xl font-bold mt-2 text-gray-700">Collecting 8 points for discount</h4>
+        <p class="text-gray-500 mt-4">There are many variations of passages of Lorem Ipsum available.</p>
+      <button class="font-bold text-xl text-gray-700 mt-2">Learn More</button>
+      </div>
+
+     </div>
+    <!-- card-2 -->
+     <div class="border border-stone-200 p-5 rounded-xl">
+      <img class="border border-dashed border-stone-400 rounded-xl" src="images/news-2.png" alt="">
+      <div class="mt-5">
+        <small class="text-sm text-gray-500">Feb 05, 2027</small>
+        <h4 class="text-2xl font-bold mt-2 text-gray-700">Collecting 8 points for discount</h4>
+        <p class="text-gray-500 mt-4">There are many variations of passages of Lorem Ipsum available.</p>
+      <button class="font-bold text-xl text-gray-700 mt-2">Learn More</button>
+      </div>
+
+     </div>
+    <!-- card-3 -->
+     <div class="border border-stone-200 p-5 rounded-xl">
+      <img class="border border-dashed border-stone-400 rounded-xl" src="images/news-3.png" alt="">
+      <div class="mt-5">
+        <small class="text-sm text-gray-500">Feb 05, 2027</small>
+        <h4 class="text-2xl font-bold mt-2 text-gray-700">Collecting 8 points for discount</h4>
+        <p class="text-gray-500 mt-4">There are many variations of passages of Lorem Ipsum available.</p>
+      <button class="font-bold text-xl text-gray-700 mt-2">Learn More</button>
+      </div>
+
+     </div>
+
+   </div>
+
+ </section>
     </main>
     <!-- footer section  -->
      <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
